--- a/src/App.css
+++ b/src/App.css
@@ -14,47 +14,46 @@
   src: local("Chi"), url(./assets/Chi/Chi-Regular.otf) format("opentype");
 }
 
-body,
-html {
+
+body {
   background-color: #f4f3f1;
   position: relative;
-  margin: 0;
-  padding: 0;
   z-index: -2;
-}
-
-body::after {
-  content: "";
   background-image: url(./assets/pattern\ background.png);
   background-repeat: repeat;
   background-size: 125px 125px;
-  opacity: 0.175; /* Replace with your desired opacity value (0.0 to 1.0) */
-  position: absolute;
-  top: 0;
-  left: 0;
+  overflow: hidden;
+
+}
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.navbar {
+  background-color: #f4f3f1;
+  z-index: 99;
   width: 100%;
-  height: 100%;
-  z-index: -1;
-}
+  position: fixed;
+  top: 0;
+  touch-action: none;
+  overflow: hidden;
+  border-bottom: 1px solid black;
 
-div::-webkit-scrollbar {
-  display: none;
 }
-main::-webkit-scrollbar {
-  display: none;
-}
-main {
-  height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
-}
-
-.snap-x {
+.snap-x-dir {
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
+}
+
+.snap-y-dir {
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+
+  max-height: 100vh;
 }
 
 .width2 {
@@ -75,12 +74,14 @@ main {
 }
 
 .border-wrap {
-  background-color: rgba(101, 136, 172, 0.75);
+  background-color: rgba(101, 136, 172, 0.8);
   border-radius: 2.5vh;
+  height: 100%;
+  width: 100%;
 }
 
 .border-wrap2 {
-  background-color: rgba(244, 243, 241, 0.75);
+  background-color: rgba(244, 243, 241, 0.8);
   border-radius: 2.5vh;
   height: 75vh;
   width: 75vw;
@@ -89,9 +90,10 @@ main {
 }
 
 .card {
+  background-color: rgba(101, 136, 172, 0.8);
   scroll-snap-align: start;
   height: 50vh;
-  width: 75vw;
+  width: 65vw;
   display: flex;
   justify-content: center;
   padding-inline: 5vh;
@@ -117,17 +119,6 @@ main {
 
 .paddingtop {
   padding-top: 47px;
-}
-
-.responsiveheight {
-  height: calc(100vh - 47px);
-}
-.responsiveheight1 {
-  height: calc(100vh - 47px - 5vh);
-}
-
-.grid-responsive-height {
-  height: calc(100vh - 62.2);
 }
 
 .boxmargin {
@@ -158,7 +149,6 @@ main {
   scroll-behavior: auto;
   gap: 1.25rem;
   display: grid;
-  overflow-y: auto;
   overscroll-behavior-x: contain;
   scroll-snap-type: x mandatory;
 }
@@ -171,12 +161,12 @@ main {
 }
 
 .bluebackground {
-  background-color: rgba(101, 136, 172, 0.75);
+  background-color: rgba(101, 136, 172, 0.8);
   border-radius: 2.5vh;
 }
 
 .beigebackground {
-  background-color: rgba(244, 243, 241, 0.75);
+  background-color: rgba(244, 243, 241, 0.8);
   border-radius: 2.5vh;
 }
 
@@ -213,6 +203,13 @@ main {
   font-size: 16px;
   color: black;
   z-index: 1;
+}
+
+.text-display {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
 .text1 {
